--- a/ECS-Framework/ECS-Framework.vcxproj
+++ b/ECS-Framework/ECS-Framework.vcxproj
@@ -144,11 +144,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Components.cpp" />
+    <ClCompile Include="ECS.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Components.h" />
-    <ClInclude Include="Systems.h" />
+    <ClInclude Include="ECS.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
